<resources>
    <string name="app_name">GoodsMenu</string>
    <string name="loading_please_wait">正在加载~</string>
    <string name="user_logined_change_retry_login">用户登录状态已改变，请重新登录~</string>
    <string name="network_fail">网络连接失败~</string>

    <string name="network_failed">网络连接失败~</string>
    <string name="reset_try">重新连接</string>
    <string name="cancel">取消</string>
    <string name="service_failed">服务器连接失效~</string>

    <string name="make_sure">确认</string>
    <string name="life">生活</string>
    <string name="goodsMenu">菜谱</string>
    <string name="str_sports">体能运动</string>
    <string name="sportsManage">体能管理</string>
    <string name="studycenter">学习中心</string>
    <string name="weekMenu">本周菜谱</string>
    <string name="menu_vote">菜谱投票</string>
    <string name="menu_order">菜谱排行</string>
    <string name="menu_mannage">菜谱管理</string>
    <string name="str_breakfast">早餐</string>
    <string name="str_lunch">午餐</string>
    <string name="str_afternoon">晚餐</string>
    <string name="str_meun_details">菜品详情</string>
    <string name="d">早餐</string>
    <string name="addcomment">发表评论</string>
    <string name="submit">提交</string>
    <string name="please_input_comment">请输入您的评价</string>
    <string name="please_input_your_commit">请输入您的评论</string>
    <string name="add_comment_success">添加成功</string>
    <string name="userName">用户：%s</string>
    <string name="order_meun">菜谱排序</string>
    <string name="please_input_key">请输入要搜索的关键字</string>
    <string name="more_give">投票最多</string>
    <string name="more_point">集赞最多</string>
    <string name="more_comment">评论最多</string>
    <string name="add_newVege">新增</string>
    <string name="str_edit">编辑</string>
    <string name="forward_selection">预选单</string>
    <string name="forward_order">预选菜单</string>
    <string name="add_new_vege">添加菜品</string>
    <string name="add_success">添加成功</string>
    <string name="str_clear_vege">清空</string>
    <string name="vege_major">主食</string>
    <string name="vege_minor">辅食</string>
    <string name="have_insert">已经添加过</string>
    <string name="vege_picture">菜品图片</string>
    <string name="is_major_vege">是否主食?</string>
    <string name="vege_Description">菜品描述</string>
    <string name="str_vege_Description">菜品描述:</string>
    <string name="please_input_vegename">请输入菜名</string>
    <string name="please_input_vegedese">菜品描述为空</string>
    <string name="str_vege_name">菜名：</string>
    <string name="finish_vote">无票已经用完</string>
    <string name="please_select_picture">请上传图片</string>

    <string name="sdcard_missing">sdcard 无效无法拍照~</string>
    <string name="sdcard_picture_missing">sdcard 无效无法获取图片~</string>
    <string name="get_pictrue_failure">获取图片失败~</string>

    <string name="setting_time">时间设置</string>
    <string name="time_is_null">请填写完整时间</string>
    <string name="end_time">结束时间:</string>
    <string name="start_time">开始时间:</string>
    <string name="finishtime_is_err">结束时间小于开始时间</string>
    <string name="finishtime_is_err2">开始时间与结束时间相同</string>
    <string name="success_vege">添加成功</string>
    <string name="watting_str">正在加载</string>
    <string name="you_not_have_level">仅限管理员操作</string>


    <string name="load_more_text">正在加载~~~</string>


    <string name="alert">提示</string>
    <string name="net_error">网络访问失败，请检查</string>
    <string name="network_error_please_retry">当前网络不可用，请检查网络</string>
    <string name="update_at_once">马上更新</string>
    <string name="exit">退出</string>
    <string name="update_later">稍后更新</string>
    <string name="error_requst">请求错误</string>
    <string name="sure_str">确认</string>

    <string name="code_get_frequently">验证码获取频繁</string>
    <string name="data_null">当前请求无数据~</string>
    <string name="confirm">确定</string>
    <string name="order_manage">菜谱管理</string>
    <string name="order_time">投票时间</string>

    <string-array name="week_name">
        <item>周一</item>
        <item>周二</item>
        <item>周三</item>
        <item>周四</item>
        <item>周五</item>
        <item>周六</item>
        <item>周天</item>
    </string-array>

    <string-array name="dayid_list">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
    </string-array>






































</resources>
