<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/cffffff"
    android:orientation="vertical">


    <include layout="@layout/activity_title" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/dimen_35"
        android:layout_marginRight="@dimen/dimen_35"
        android:layout_marginTop="@dimen/dimen_35"
        android:background="@drawable/addnewedie_bg"

        android:orientation="vertical">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/dimen_35"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginLeft="@dimen/dimen_5"
                android:gravity="center_vertical"
                android:text="@string/str_vege_name"
                android:textColor="@color/c808080"
                android:textSize="@dimen/dimen_16" />

            <EditText
                android:id="@+id/et_name"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@null"
                android:gravity="center_vertical"
                android:hint="@string/please_input_vegename"
                android:textSize="@dimen/dimen_14" />

        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/dimen_1"
            android:background="@color/c808080" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="@dimen/dimen_35"
            android:layout_marginLeft="@dimen/dimen_5"
            android:gravity="center_vertical"
            android:text="@string/str_vege_Description" />

        <EditText
            android:id="@+id/et_desc"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dimen_100"
            android:layout_marginTop="@dimen/dimen_5"
            android:background="@drawable/vege_describ_bg"
            android:gravity="top"
            android:hint="@string/vege_Description"
            android:paddingLeft="@dimen/dimen_5"
            android:paddingTop="@dimen/dimen_5"
            android:textSize="@dimen/dimen_14" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/dimen_35"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginLeft="@dimen/dimen_5"
                android:gravity="center_vertical"
                android:text="@string/is_major_vege"
                android:textColor="@color/c808080"
                android:textSize="@dimen/dimen_18" />

            <TextView
                android:id="@+id/tv_showtype"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/vege_major"
                android:textColor="@color/colorAccent"
                android:textSize="@dimen/dimen_16" />


            <ImageView
                android:id="@+id/im_select_type"
                android:layout_width="@dimen/dimen_50"
                android:layout_height="@dimen/dimen_35"
                android:src="@drawable/open" />

        </LinearLayout>


    </LinearLayout>


    <TextView
        android:layout_width="match_parent"
        android:layout_height="@dimen/dimen_35"
        android:layout_marginLeft="@dimen/dimen_35"
        android:gravity="center_vertical"
        android:text="@string/vege_picture"
        android:textColor="@color/c808080"
        android:textSize="@dimen/dimen_16" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/dimen_35"
        android:orientation="horizontal">


        <ImageView
            android:id="@+id/im_set"
            android:layout_width="@dimen/dimen_50"
            android:layout_height="@dimen/dimen_50"
            android:layout_marginBottom="@dimen/dimen_15"
            android:layout_marginLeft="@dimen/dimen_5"
            android:src="@drawable/camera_pictrue" />

        <ImageView
            android:id="@+id/im_get"
            android:layout_width="@dimen/dimen_50"
            android:layout_height="@dimen/dimen_50"
            android:layout_marginBottom="@dimen/dimen_15"
            android:layout_marginLeft="@dimen/dimen_10" />
    </LinearLayout>


    <TextView
        android:id="@+id/tv_submit"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dimen_35"
        android:layout_marginLeft="@dimen/dimen_35"
        android:layout_marginRight="@dimen/dimen_35"
        android:layout_marginTop="@dimen/dimen_25"
        android:background="@drawable/addnewedie_bg"
        android:gravity="center"
        android:text="@string/make_sure"
        android:textColor="@color/c808080"
        android:textSize="@dimen/dimen_16" />


</LinearLayout>