<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="@dimen/dimen_80"
    android:layout_height="wrap_content"
    android:background="@color/cefefef"
    android:orientation="vertical">


    <TextView
        android:id="@+id/tv_more_give"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dimen_35"
        android:layout_marginTop="@dimen/dimen_15"
        android:gravity="center"
        android:text="@string/more_give" />

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/dimen_1"
        android:background="@color/c808080" />

    <TextView
        android:id="@+id/tv_more_point"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dimen_35"
        android:layout_marginTop="@dimen/dimen_5"
        android:gravity="center"
        android:text="@string/more_point" />

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/dimen_1"
        android:background="@color/c808080" />

    <TextView
        android:id="@+id/tv_more_comment"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dimen_35"
        android:layout_marginBottom="@dimen/dimen_15"
        android:layout_marginTop="@dimen/dimen_5"
        android:gravity="center"
        android:text="@string/more_comment" />

</LinearLayout>
