<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/cffffff"
    android:orientation="vertical">

    <TextView
        android:id="@+id/tv_home_title"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:background="@color/cff9037"
        android:gravity="center"
        android:text="@string/life"
        android:textColor="@color/cffffff"
        android:textSize="@dimen/dp_18" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_30"
        android:gravity="center_vertical"
        android:paddingLeft="@dimen/dimen_20"
        android:text="@string/goodsMenu"
        android:textColor="@color/c000"
        android:textSize="@dimen/dimen_18" />

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/dimen_1"
        android:background="@color/cefefef"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_80"
        android:background="@color/cffffff"
        android:orientation="horizontal">


        <LinearLayout
            android:id="@+id/lin_weekMenu"
            android:layout_width="@dimen/dp_0"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical">

            <ImageView
                android:layout_width="45dp"
                android:layout_height="45dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="10dp"
                android:src="@drawable/weekmeun" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:text="@string/weekMenu"
                android:textColor="@color/c000"
                android:textSize="@dimen/dp_10" />

        </LinearLayout>

        <View
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:background="@color/cefefef" />

        <LinearLayout
            android:id="@+id/lin_meunVote"
            android:layout_width="@dimen/dp_0"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical">

            <ImageView
                android:layout_width="45dp"
                android:layout_height="45dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="10dp"
                android:src="@drawable/meun_vote" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:text="@string/menu_vote"
                android:textColor="@color/c000"
                android:textSize="@dimen/dp_10" />

        </LinearLayout>

        <View
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:background="@color/cefefef" />

        <LinearLayout
            android:id="@+id/lin_meunOrder"
            android:layout_width="@dimen/dp_0"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@color/cffffff"
            android:orientation="vertical">

            <ImageView
                android:layout_width="45dp"
                android:layout_height="45dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="10dp"
                android:src="@drawable/meun_order" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:text="@string/menu_order"
                android:textColor="@color/c000"
                android:textSize="@dimen/dp_10" />

        </LinearLayout>

        <View
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:background="@color/cefefef" />

        <LinearLayout
            android:id="@+id/lin_meunMannage"
            android:layout_width="@dimen/dp_0"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@color/cffffff"
            android:orientation="vertical">

            <ImageView
                android:layout_width="45dp"
                android:layout_height="45dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="10dp"
                android:src="@drawable/meun_manage" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:text="@string/menu_mannage"
                android:textColor="@color/c000"
                android:textSize="@dimen/dp_10" />

        </LinearLayout>


    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/dimen_1"
        android:background="@color/cefefef" />

    <TextView
        android:id="@+id/tv_order"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_30"
        android:gravity="center_vertical"
        android:paddingLeft="@dimen/dimen_20"
        android:text="@string/str_sports"
        android:textColor="@color/c000"
        android:textSize="@dimen/dimen_18" />

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/dimen_1"
        android:background="@color/cefefef" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_80"
        android:background="@color/cffffff"
        android:orientation="horizontal">


        <LinearLayout
            android:layout_width="@dimen/dp_0"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical">

            <ImageView
                android:layout_width="45dp"
                android:layout_height="45dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="10dp"
                android:src="@drawable/sports_manage" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:text="@string/sportsManage"
                android:textColor="@color/c000"
                android:textSize="@dimen/dp_10" />

        </LinearLayout>
        <View
            android:layout_width="@dimen/dimen_1"
            android:layout_height="match_parent"
            android:background="@color/cefefef" />
        <View
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1" />

        <View
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1" />

        <View
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1" />


    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/dimen_1"
        android:background="@color/cefefef" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_30"
        android:gravity="center_vertical"
        android:paddingLeft="@dimen/dimen_20"
        android:text="@string/studycenter"
        android:textColor="@color/c000"
        android:textSize="@dimen/dimen_18" />

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/dimen_1"
        android:background="@color/cefefef" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_80"
        android:background="@color/cffffff"
        android:orientation="horizontal">


        <LinearLayout
            android:layout_width="@dimen/dp_0"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical">

            <ImageView
                android:layout_width="45dp"
                android:layout_height="45dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="10dp"
                android:src="@drawable/study_vido" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:text="@string/sportsManage"
                android:textColor="@color/c000"
                android:textSize="@dimen/dp_10" />

        </LinearLayout>

        <View
            android:layout_width="@dimen/dimen_1"
            android:layout_height="match_parent"
            android:background="@color/cefefef" />

        <LinearLayout
            android:layout_width="@dimen/dp_0"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical">

            <ImageView
                android:layout_width="45dp"
                android:layout_height="45dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="10dp"
                android:src="@drawable/study_data" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:text="@string/sportsManage"
                android:textColor="@color/c000"
                android:textSize="@dimen/dp_10" />

        </LinearLayout>
        <View
            android:layout_width="@dimen/dimen_1"
            android:layout_height="match_parent"
            android:background="@color/cefefef" />
        <View
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1" />

        <View
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1" />


    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/dimen_1"
        android:background="@color/cefefef" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

</LinearLayout>