<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/cefefef"
    android:orientation="vertical">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/mainColor_blue"
        android:orientation="horizontal">

        <LinearLayout
            android:id="@+id/im_back"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_centerVertical="true">

            <ImageView
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_gravity="center"
                android:paddingLeft="5dp"
                android:layout_marginRight="@dimen/dimen_10"
                android:src="@drawable/ic_arrow_left" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginBottom="@dimen/dimen_5"
            android:layout_marginTop="@dimen/dimen_5"
            android:layout_weight="1"
            android:background="@drawable/manage_edit_bg"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/et_search"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@null"
                android:hint="@string/please_input_key"
                android:paddingLeft="@dimen/dimen_5"
                android:textSize="@dimen/dimen_15" />

            <ImageView
                android:id="@+id/im_search"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginRight="@dimen/dimen_10"
                android:src="@drawable/search_img" />
        </LinearLayout>

        <TextView
            android:id="@+id/tv_edit"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center"
            android:paddingLeft="@dimen/dimen_10"
            android:paddingRight="@dimen/dimen_15"
            android:text="@string/str_edit"
            android:textColor="@color/white"
            android:textSize="@dimen/dimen_15" />


    </LinearLayout>


    <android.support.v4.widget.SwipeRefreshLayout
        android:id="@+id/SwipeRefreshLayout"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <android.support.v7.widget.RecyclerView
            android:id="@+id/recyclerView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scrollbars="none">

        </android.support.v7.widget.RecyclerView>


    </android.support.v4.widget.SwipeRefreshLayout>


    <TextView
        android:id="@+id/tv_add_new"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dimen_35"
        android:layout_marginBottom="@dimen/dimen_10"
        android:layout_marginLeft="@dimen/dimen_35"
        android:layout_marginRight="@dimen/dimen_35"
        android:layout_marginTop="@dimen/dimen_5"
        android:background="@drawable/addnewvege_bg"
        android:gravity="center"
        android:text="@string/add_newVege"
        android:textColor="@color/cffffff"
        android:textSize="@dimen/dimen_20" />

</LinearLayout>