<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/cffffff"
    android:orientation="vertical">

    <include layout="@layout/activity_title" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/dimen_35"
        android:layout_marginTop="@dimen/dimen_16"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginLeft="@dimen/dimen_16"
            android:gravity="center_vertical"
            android:text="@string/start_time"
            android:textSize="@dimen/dimen_16" />


        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginLeft="@dimen/dimen_16"
            android:layout_marginRight="@dimen/dimen_16"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tv_startday"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:gravity="center"
                android:text=""
                android:textSize="@dimen/dimen_16" />


            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/dimen_1"
                android:background="@color/c808080" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginLeft="@dimen/dimen_16"
            android:layout_marginRight="@dimen/dimen_16"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tv_starttime"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:gravity="center"
                android:text=""
                android:textSize="@dimen/dimen_16" />


            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/dimen_1"
                android:background="@color/c808080" />
        </LinearLayout>


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/dimen_35"
        android:layout_marginTop="@dimen/dimen_16"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginLeft="@dimen/dimen_16"
            android:gravity="center_vertical"
            android:text="@string/end_time"
            android:textSize="@dimen/dimen_16" />


        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginLeft="@dimen/dimen_16"
            android:layout_marginRight="@dimen/dimen_16"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tv_endday"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:gravity="center"
                android:text=""
                android:textSize="@dimen/dimen_16" />


            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/dimen_1"
                android:background="@color/c808080" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginLeft="@dimen/dimen_16"
            android:layout_marginRight="@dimen/dimen_16"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tv_endtime"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:gravity="center"
                android:text=""
                android:textSize="@dimen/dimen_16" />


            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/dimen_1"
                android:background="@color/c808080" />
        </LinearLayout>

    </LinearLayout>

    <TextView
        android:id="@+id/tv_submit"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dimen_35"
        android:layout_marginBottom="@dimen/dimen_10"
        android:layout_marginLeft="@dimen/dimen_35"
        android:layout_marginRight="@dimen/dimen_35"
        android:layout_marginTop="@dimen/dimen_15"
        android:background="@drawable/addnewvege_bg"
        android:gravity="center"
        android:text="@string/submit"
        android:textColor="@color/cffffff"
        android:textSize="@dimen/dimen_20" />
</LinearLayout>